@@ -1,5 +1,11 @@
 2012-05-22  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/reiserfs.c (grub_reiserfs_iterate_dir): Fix size byteswap
+	with old reiserfs.
+	(grub_reiserfs_open): Don't free root.
+
+2012-05-22  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/fshelp.c (grub_fshelp_find_file): Set currnode to 0
 	after freeing for safety.
 
